# pyfarm-sdk

./: pyproject.toml
src/pyfarm/sdk/: __init__.py  client.py  extensions.py
tests/: test_sdk.py
