[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pyfarm-sdk"
version = "0.1.0"
description = "Python SDK and extension framework for pyfarm integrations."
requires-python = ">=3.10"
dependencies = [
    "pyfarm-core>=0.1.0",
    "pyfarm-api>=0.1.0",
    "pyfarm-cli>=0.1.0",
    "httpx>=0.24",
    "pydantic>=2.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio>=0.23"]

[tool.hatch.build.targets.wheel]
packages = ["src/pyfarm"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
